fixed content jumping when disabling scrollbar

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -8,6 +8,7 @@
   display: flex;
   height: rem(72);
   justify-content: space-between;
+  margin-right: calc(100% - 100vw);
   padding: 0.5rem 0.9375rem;
   position: relative;
   z-index: 60;
